<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_vendors"
        android:name="com.ksolutions.whatNeed.ui.fragments.vendors.VendorsFragment"
        android:label="@string/title_street_vendors"
        tools:layout="@layout/fragment_vendors" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ksolutions.whatNeed.ui.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ksolutions.whatNeed.ui.fragments.business.BusinessFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_business" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ksolutions.whatNeed.ui.fragments.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>