<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    tools:context=".activities.VendorRegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_vendor_register_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/vendor_registration"
        app:titleTextColor="@color/white"
        android:background="@drawable/nav_header_main_background"
        app:titleTextAppearance="@style/TitleBarTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay" >
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/app_name_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_vendor_register_activity"
        android:layout_marginTop="@dimen/app_name_margin_top"
        android:layout_marginBottom="@dimen/app_name_margin_bottom"
        android:text="@string/app_name"
        android:fontFamily="@font/righteous"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/intro_screen_title_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
        android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_heading"
        android:gravity="center"
        android:text="@string/vendor_register_description_text"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/authentication_description_text_size" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
        android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
        android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc"
        android:elevation="@dimen/card_view_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_view_layout_content_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_vendor_register_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textNoSuggestions"
                    android:textSize="@dimen/et_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_vendor_register_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="textNoSuggestions"
                    android:textSize="@dimen/et_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_vendor_register_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:textSize="@dimen/et_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_vendor_register_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/selling_item"
                    android:textSize="@dimen/et_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_vendor_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/btn_marginStartEnd"
                android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
                android:layout_marginEnd="@dimen/btn_marginStartEnd"
                android:background="@drawable/shape_button_rounded"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_paddingTopBottom"
                android:paddingBottom="@dimen/btn_paddingTopBottom"
                android:text="@string/registerr"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_text_size" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>