<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activities.OtpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_otp_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/otp"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/authentication_screen_content_marginTop"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/app_name_margin_top"
            android:layout_marginBottom="@dimen/app_name_margin_bottom"
            android:text="@string/app_name"
            android:fontFamily="@font/righteous"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/intro_screen_title_text_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/mobile_input_logo_size"
            android:layout_height="@dimen/mobile_input_logo_size"
            android:layout_marginTop="@dimen/mobile_input_screen_image_marginTop"
            android:contentDescription="@string/image_contentDescription"
            android:src="@drawable/ic_task_image"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_screen_desc_margin_top"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:gravity="center"
            android:text="@string/otp_input_description_text"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/authentication_description_text_size" />

        <TextView
            android:id="@+id/given_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/otp_input_margin_top"
            android:layout_marginBottom="@dimen/otp_input_margin_top"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/given_mob_size" />

        <com.chaos.view.PinView
            android:id="@+id/otpVerifyEdit"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/otp_input_margin_top"
            android:gravity="center"
            android:layout_gravity="center"
            android:cursorVisible="true"
            android:inputType="number"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemRadius="5dp"
            app:itemWidth="50dp"
            app:lineColor="@color/black"
            android:textColor="@color/black">
        </com.chaos.view.PinView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_otp_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/btn_marginStartEnd"
            android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
            android:layout_marginEnd="@dimen/btn_marginStartEnd"
            android:background="@drawable/shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_paddingTopBottom"
            android:paddingBottom="@dimen/btn_paddingTopBottom"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_text_size" />

    </LinearLayout>

</LinearLayout>