<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activities.MobileInputActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_mobile_input_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/mobile"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/authentication_screen_content_marginTop"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/app_name_margin_top"
            android:layout_marginBottom="@dimen/app_name_margin_bottom"
            android:text="@string/app_name"
            android:fontFamily="@font/righteous"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/intro_screen_title_text_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/mobile_input_logo_size"
            android:layout_height="@dimen/mobile_input_logo_size"
            android:layout_marginTop="@dimen/mobile_input_screen_image_marginTop"
            android:contentDescription="@string/image_contentDescription"
            android:src="@drawable/ic_task_image"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_screen_desc_margin_top"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:gravity="center"
            android:text="@string/mobile_input_description_text"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/authentication_description_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/ccp_height"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/country_code_margin_start"
                    android:background="@drawable/ccp_outline"
                    android:paddingLeft="2dp"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_defaultNameCode="true"
                    app:ccp_showFlag="false"
                    app:ccp_showNameCode="false"
                    app:ccp_textSize="@dimen/mobile_input_text_size">
                </com.hbb20.CountryCodePicker>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/mobile_input_margin_left"
                    android:layout_marginEnd="@dimen/country_code_margin_start"
                    android:layout_marginTop="@dimen/mobile_input_margin_top"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/mobile_input_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/mobile_input_margin_left"
                        android:hint="@string/mobile"
                        android:textColorHint="@color/secondary_text_color"
                        android:inputType="phone"
                        android:textSize="@dimen/mobile_input_text_size" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_mobile_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/btn_marginStartEnd"
            android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
            android:layout_marginEnd="@dimen/btn_marginStartEnd"
            android:background="@drawable/shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_paddingTopBottom"
            android:paddingBottom="@dimen/btn_paddingTopBottom"
            android:text="@string/get_otp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_text_size" />

    </LinearLayout>
</LinearLayout>